--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <!-- Navigation Bar -->
   <nav class="main">
     <ul>
-        <li class="active"><a href="home.html" class="active">Home<i class="fa-solid fa-house"></i></a></li>
-        <li><a href="index.html">Food <i class="fa-solid fa-utensils"></i></a></li>
+        <li class="active"><a href="index.html" class="active">Home<i class="fa-solid fa-house"></i></a></li>
+        <li><a href="food.html">Food <i class="fa-solid fa-utensils"></i></a></li>
         <li><a href="events.html">Events <i class="fa-solid fa-city"></i></a></li>
         <li><a href="loc1.html" id="loc1">Hong Kong Island East<i class="fa-solid fa-location-dot"></i> </a></li>
         <li><a href="loc2.html" id="loc2">Kowloon East<i class="fa-solid fa-location-dot"></i> </a></li>
